# capital-gains

./: .dockerignore  .pre-commit-config.yaml  Containerfile  Dockerfile  NOTES.md  README.md  entrada.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
capital_gains/: __main__.py  cli.py  money.py  tax.py
tests/: test_cases.py  test_cli.py  test_money.py  test_tax.py
